[tool.poetry]
name = "winterqueen31pshebev723"
version = "0.1.0"
description = ""
authors = ["Your Name <you@aff.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
pytz = "^2020.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
